--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,22 @@
 @tailwind utilities;
 
 html,body {
-  height: 100%;
+  height: auto;
+  min-height: 100vh;
   width: 100%;
+  overflow-y: hidden;
 }
 
 body {
   display: flex;
   flex-direction: column;
+  overflow-y: hidden;
+}
+
+#root {
+  height: auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow-y: hidden
 }
