--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-html,body {
+html,
+body {
   height: auto;
   min-height: 100vh;
   width: 100%;
-  overflow-y: hidden;
 }
 
 body {
   display: flex;
   flex-direction: column;
-  overflow-y: hidden;
+  overflow: auto;
 }
 
 #root {
@@ -20,5 +20,4 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
-  overflow-y: hidden
 }
