--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,12 @@ body {
   flex-direction: column;
   min-height: 100vh;
 }
+
+progress::-webkit-progress-bar {
+  background-color: #fff;
+  width: 100%;
+}
+
+progress::-webkit-progress-value {
+  background-color: #fdba74;
+}
