--- a/src/index.css
+++ b/src/index.css
@@ -27,11 +27,20 @@ body {
   min-height: 100vh;
 }
 
-progress::-webkit-progress-bar {
+#loktra-progress::-webkit-progress-bar {
   background-color: #fff;
   width: 100%;
 }
 
-progress::-webkit-progress-value {
+#loktra-progress::-webkit-progress-value {
   background-color: #fdba74;
+}
+
+#todo-progress::-webkit-progress-bar {
+  background-color: gray;
+  width: 100%;
+}
+
+#todo-progress::-webkit-progress-value {
+  background-color: green;
 }
