--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
   display: flex;
   flex-direction: column;
   overflow: auto;
+  margin: 0;
 }
 
 #root {
@@ -25,6 +26,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  margin: 0;
 }
 
 #loktra-progress::-webkit-progress-bar {
