--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,43 @@ body {
     opacity: 100%;
   }
 }
+
+.coin {
+  width: 64px;
+  height: 64px;
+  transform-style: preserve-3d;
+}
+
+.die {
+  width: 64px;
+  height: 64px;
+  transform-style: preserve-3d;
+}
+
+.animate-coin {
+  animation: spin 0.5s linear infinite;
+}
+
+.animate-die {
+  animation: rotate 0.5s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotateY(0deg);
+  }
+
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotateZ(0deg);
+  }
+
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
