--- a/src/index.css
+++ b/src/index.css
@@ -118,3 +118,11 @@ body {
     background-color: black;
   }
 }
+
+#video-menu::-webkit-scrollbar {
+  display: none;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
