--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,10 @@ body {
   animation-timing-function: ease-in-out;
 }
 
+.event-container:hover img {
+  transform: scale(1.2);
+}
+
 @keyframes blinking {
   0% {
     opacity: 100%;
