--- a/src/markdown-editor/index.css
+++ b/src/markdown-editor/index.css
@@ -4,50 +4,49 @@ h3,
 h4,
 h5,
 h6 {
-    font-weight: bold
+  font-weight: bold;
 }
 
-
 ul li {
-    list-style-type: disc;
-    appearance: list;
+  list-style-type: disc;
+  appearance: list;
 }
 
 a {
-    color: blue;
-    text-decoration: underline;
+  color: blue;
+  text-decoration: underline;
 }
 
 hr {
-    border-color: black;
+  border-color: black;
 }
 
 pre {
-    background-color: beige;
-    padding: 0.5em
+  background-color: beige;
+  padding: 0.5em;
 }
 
 blockquote {
-    appearance: auto;
+  appearance: auto;
 }
 
 blockquote {
-    background: #f9f9f9;
-    border-left: 10px solid #ccc;
-    margin: 1.5em 10px;
-    padding: 0.5em 10px;
-    quotes: "\201C" "\201D" "\2018" "\2019";
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
 }
 
 blockquote:before {
-    color: #ccc;
-    content: open-quote;
-    font-size: 4em;
-    line-height: 0.1em;
-    margin-right: 0.25em;
-    vertical-align: -0.4em;
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
 }
 
 blockquote p {
-    display: inline;
+  display: inline;
 }
